@@ -1,5 +1,10 @@
 2008-05-08  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totem-plugin-viewer.c (resolve_redirect),
+	(on_got_redirect): Same change for the browser plugin
+
+2008-05-08  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c (on_got_redirect): Fix build against totem-pl-parser
 	trunk
 
